# CMake_with_Catch2

./: CMakeLists.txt  README.md
headers/: statslib.hpp
sources/: main.cpp  mathslib.cpp  mathslib.hpp  statslib.cpp
tests/: math_add2number_test.cpp  math_multiply2number_test.cpp
